[tool.poetry]
name = "rx-calc"
version = "0.1.0"
description = "A reactive subset of Python for doing napkin math."
authors = ["Kyle Anthony Williams <kyle.anthony.williams2@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
reactivex = "^4.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
